--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,6 @@
 \begin{abstract}
-
-The abstract of the project report
-
+        Securing Cyber-Physical and Real-Time systems is a growing concern as these systems interact with the physical environment. Off the shelf system auditing solutions like the Linux Audit framework, introduce significant overheads in terms of latency and storage, which are undesirable in this domain, which has strict task deadlines and resource constraints.
+        
+        This work presents \textbf{\Sys}, a solution that reduces costs associated with system auditing in these time-sensitive systems, by exploiting the predictability in their task model to drastically cut down audit log generation without losing information valuable for forensic investigations. We evaluate the effectiveness of our solution using ArduPilot, an autopilot application suite, observing a \textbf{91\%} reduction in storage costs while meeting temporal and auditing requirements of the application. \Sys provides a way forward for auditing CPS.
+        
 \end{abstract}
