--- a/discussion.tex
+++ b/discussion.tex
@@ -1,1 +1,8 @@
 \section{Discussion}
+\subsection{Audit Log Reduction} Our findings show that reducing the rate of incoming audit messages is an important factor in achieving lossless audit logging. Future work can focus on evaluating the applicability of existing kernel based log reduction methods \cite{Ma2018,Ma2016} and propose novel solutions that account for the periodic and repetitive nature of real-time tasks to reduce rate of audit log generation, improving kernel buffer utilization and reducing storage costs.
+
+\subsection{Schedulability Analysis} In order to demonstrate that our estimates for auditing overheads are reasonably accurate, future work can subject our task model to a rigorous schedulability analysis using randomized workloads. Such an analysis would also enable us to compare the relative impact of enhancements to the audit system and understand the tradeoff between temporal integrity and completeness of audit logs.
+
+\subsection{Log Storage} Our study assumes that audit logs are written to disk, and thus measures the commit time of the audit logs accordingly. Linux Audit supports usage of customizable plugins that enable pushing the logs over the network to a centralized repository for archival and analysis \cite{audisp-remote}. The network writes may introduce variability in the asynchronous overheads, which would need to be accounted for when deploying a real application. 
+
+\subsection{Applicability to other frameworks} Our study measures the asynchronous performance of the Linux Audit framework. Nevertheless, we find that asynchronous logging mechanisms are ubiquitous and apply to other auditing mechanisms we are aware of as well \cite{Bates2015,Ma2015,Ma2016,ETW,Procmon}. In fact, block-based I/O operations are always asynchronous within kernels unless explicitly configured for synchronous operation. Still, future work is need to explore the applicabilty of our observations on other platforms.
