--- a/measurement-setup.tex
+++ b/measurement-setup.tex
@@ -1,6 +1,7 @@
 \section{Measurement Setup / Design}
-\subsection{System Model}
-\begin{table}[t]%
+%\subsection{System Model}
+%\todo[inline] {Lay down basic assumptions of the system}
+%\begin{table}[t]%
     \centering%
     \caption{Evaluation Platform}%
     \label{tab:eval_setup}%
@@ -40,4 +41,6 @@
     }
     \end{table}%
 \subsection{Real Time Task Model}
+\todo[inline]{Add brief description of the task model and highlight our initial insights}
 \subsection{Instrumentation}
+\todo[inline]{Walk through the changes that were made to observe behavior of the audit subsystem.}
