--- a/paper.tex
+++ b/paper.tex
@@ -24,14 +24,14 @@
 
 \input{introduction}
 \input{background}
-\input{measurement}
+%\input{measurement-setup}
 \input{evaluation}
 \input{discussion}
 \input{related_work}
 \input{conclusion}
 \input{metadata}
 \bibliographystyle{acm}
-\bibliography{ref}
+\bibliography{master-ref}
 
 \end{document}
 \endinput
